Make language selector work, fix CSRF token issue

--- a/app/javascript/locales/en.json
+++ b/app/javascript/locales/en.json
@@ -300,7 +300,6 @@
         }
       }
     },
-    "hello": "Hello world",
     "helpers": {
       "select": {
         "prompt": "Please select"
@@ -311,6 +310,7 @@
         "update": "Update %{model}"
       }
     },
+    "locale_name": "English",
     "number": {
       "currency": {
         "format": {
